--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
-    <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
     <script type="text/javascript">
-       (function(){
-          emailjs.init("2DcCIaf_UdiUt65Q2");
-       })();
+        (function () {
+            emailjs.init("2DcCIaf_UdiUt65Q2");
+        })();
     </script>
 </head>
 
 <body>
-    <section id="landing_page">
+    <section id="landing_page" onmousemove="moveBackground(event)">
         <nav>
             <figure>
                 <img id="personal-logo" src="./assets/RT logo.png" alt="">
             </figure>
             <ul class="nav_link--list">
-                <li class="nav_link">
+                <li class="nav_link" onclick="toggleModal()">
                     <a href="#" class="
                     nav_link--anchor 
                     link_hover-effect 
@@ -34,7 +33,7 @@
                     ">About</a>
                 </li>
                 <li class="nav_link">
-                    <a href="#" class="
+                    <a href="#projects" class="
                     nav_link--anchor 
                     link_hover-effect 
                     link_hover--effect-black
@@ -48,10 +47,8 @@
                     ">Contact</a>
                 </li>
 
-                <li class="nav_link click" >
-                    <a href="#" 
-                    onclick="toggleContrast()"
-                    class="
+                <li class="nav_link click">
+                    <a href="#" onclick="toggleContrast()" class="
                     nav_link--anchor 
                     "><i class="fas fa-adjust "></i></a>
                 </li>
@@ -59,13 +56,14 @@
             </ul>
         </nav>
 
-        <header class="header">
-            <div class="header_content">
-                <h1 class="title">Hey</h1>
+    <header class="header">
+        <div class="header_content">
+            <h1 class="title">Hey</h1>
                 <h1 class="title"><span class="purple">I'm Rayson.</span></h1>
                 <p class="header_para">I'm an aspiring <span class="purple">Frontend Software Engineer</span> with a
                     strong
-                    passion for building <span class="purple">responsive</span> and <span class="purple">performant</span> web applications.
+                    passion for building <span class="purple">responsive</span> and <span
+                        class="purple">performant</span> web applications.
                     <br>
                     Here's a bit more <span class="purple click" onclick="toggleModal()">about me.</span>
                 </p>
@@ -84,10 +82,20 @@
                     </a>
                 </div>
             </div>
+            <div class="animation">
+                <figure class="animation_wrapper">
+                    <img src="./assets/shuttle.png" class="rocket">
+                </figure>
+                <img src="./assets/worldwide.png" class="earth">
+            </div>
         </header>
-        <button class="mail_btn click" onclick="toggleModal()">
-            <i class="fas fa-envelope"></i>
-        </button>
+   
+        <a href="#">
+
+            <button class="mail_btn click" onClick="toggleModal()">
+                <i class="fas fa-envelope"></i>
+            </button>
+        </a>
         <a href="#projects" class="scroll">
             <div class="scroll_icon click"></div>
         </a>
@@ -168,10 +176,20 @@
                     Thanks for the message! Looking to speak to you soon!
                 </div>
             </div>
-            
-        </div>
-    </section>
 
+        </div>
+        <img src="./assets/circle.svg" class="shape shape--0">
+        <img src="./assets/semi circle.svg" class="shape shape--1">
+        <img src="./assets/squiggly.svg" class="shape shape--2">
+        <img src="./assets/circle.svg" class="shape shape--3">
+        <img src="./assets/triangle.svg" class="shape shape--4">
+        <img src="./assets/circle.svg" class="shape shape--5">
+        <img src="./assets/squiggly.svg" class="shape shape--6">
+        <img src="./assets/circle.svg" class="shape shape--7">
+        <img src="./assets/semi circle.svg" class="shape shape--8">
+
+
+    </section>
     <section id="projects">
         <div class="container">
             <div class="row">
@@ -277,25 +295,26 @@
                     <img src="./assets/RT logo.png" class="footer_logo" alt="">
                 </figure>
                 <div class="footer_social--list">
-                    <a href="https://github.com/CausalRay" class="footer_social--link
+                    <a href="https://github.com/CausalRay" target="_blank" class="footer_social--link
             link_hover-effect
             link_hover--effect-white">
                         GitHub
                     </a>
 
-                    <a href="https://www.linkedin.com/in/rayson-thow-114067175/?originalSubdomain=sg" class="footer_social--link
+                    <a href="https://www.linkedin.com/in/rayson-thow-114067175/?originalSubdomain=sg" target="_blank"
+                        class="footer_social--link
             link_hover-effect
             link_hover--effect-white">
                         Linkedin
                     </a>
 
-                    <a href="#" class="footer_social--link
+                    <a href="#" onclick="toggleModal()" class="footer_social--link
                 link_hover-effect
                 link_hover--effect-white">
                         Contact
                     </a>
 
-                    <a href="#" class="footer_social--link
+                    <a href="#" target="_blank" class="footer_social--link
                 link_hover-effect
                 link_hover--effect-white">
                         Resume
