--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                 <li class="nav_link click">
                     <a href="#" onclick="toggleContrast()" class="
                     nav_link--anchor 
+                    link_hover-effect 
+                    link_hover--effect-black
                     "><i class="fas fa-adjust "></i></a>
                 </li>
 
@@ -88,8 +90,15 @@
                 </figure>
                 <img src="./assets/worldwide.png" class="earth">
             </div>
+
         </header>
-   
+
+        <div class="up">
+            <figure class="up_wrapper">
+                <img src="./assets/hot-air-balloon.png" class="hot_air--balloon" alt="">
+            </figure>
+        </div>
+        
         <a href="#">
 
             <button class="mail_btn click" onClick="toggleModal()">
@@ -178,15 +187,25 @@
             </div>
 
         </div>
-        <img src="./assets/circle.svg" class="shape shape--0">
-        <img src="./assets/semi circle.svg" class="shape shape--1">
-        <img src="./assets/squiggly.svg" class="shape shape--2">
-        <img src="./assets/circle.svg" class="shape shape--3">
-        <img src="./assets/triangle.svg" class="shape shape--4">
-        <img src="./assets/circle.svg" class="shape shape--5">
-        <img src="./assets/squiggly.svg" class="shape shape--6">
-        <img src="./assets/circle.svg" class="shape shape--7">
-        <img src="./assets/semi circle.svg" class="shape shape--8">
+        <img src="./assets/cloud.png" class="shape day_shapes shape--0">
+        <img src="./assets/sun.png" class="shape day_shapes shape--1">
+        <img src="./assets/balloon.png" class="shape day_shapes shape--2">
+        <img src="./assets/balloon.png" class="shape day_shapes shape--3">
+        <img src="./assets/cloud.png" class="shape day_shapes  shape--4">
+        <img src="./assets/plane.png" class="shape day_shapes plane shape--5">
+        <img src="./assets/plane.png" class="shape day_shapes shape--6">
+        <img src="./assets/sun.png" class="shape day_shapes shape--7">
+        <img src="./assets/cloud.png" class="shape day_shapes shape--8">
+        
+        <img src="./assets/meteor.png" class="shape night_shapes shape--0">
+        <img src="./assets/star.png" class="shape night_shapes shape--1">
+        <img src="./assets/satellite.png" class="shape night_shapes shape--2">
+        <img src="./assets/star.png" class="shape night_shapes shape--3">
+        <img src="./assets/satellite.png" class="shape night_shapes shape--4">
+        <img src="./assets/planet.png" class="shape night_shapes planet shape--5">
+        <img src="./assets/satellite.png" class="shape night_shapes shape--6">
+        <img src="./assets/planet.png" class="shape night_shapes shape--7">
+        <img src="./assets/meteor.png" class="shape night_shapes shape--8">
 
 
     </section>
